Minor update: Added picture for each dish

--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
 </head>
 <body>
     <h1>Margherita Pizza</h1>
-    <a href="recipes/margherita-pizza.html">Margherita Pizza</a>
+    <ul style="list-style-type:none;">
+        <li><img src="recipe-images/margherita-pizza.jpg" height="310" width="310"></li>
+        <li><a href="recipes/margherita-pizza.html">Margherita Pizza</a></li>
+    </ul>
     <h1>Peanut Curry Chicken</h1>
-    <a href="recipes/peanut-curry-chicken.html">Peanut Curry Chicken</a>
+    <ul style="list-style-type:none;">
+        <li><img src="recipe-images/peanut-chicken-curry.jpg" height="310" width="310"></li>
+        <li><a href="recipes/peanut-curry-chicken.html">Peanut Curry Chicken</a></li>
+    </ul>
     <h1>Sweet And Sour Brisket</h1>
-    <a href="recipes/sweet-sour-brisket.html">Sweet And Sour Brisket</a>
-
+    <ul style="list-style-type:none;">
+        <li><img src="recipe-images/sweet-sour-brisket.jpg"height="310" width="310"></li>
+        <li><a href="recipes/sweet-sour-brisket.html">Sweet And Sour Brisket</a></li>
+    </ul>
 </body>
 </html>
