--- a/index.html
+++ b/index.html
@@ -11,15 +11,22 @@
         <li><img src="recipe-images/margherita-pizza.jpg" height="310" width="310"></li>
         <li><a href="recipes/margherita-pizza.html">Margherita Pizza</a></li>
     </ul>
-    <h1>Peanut Curry Chicken</h1>
+    
+    <h1>Chef John's Peanut Curry Chicken</h1>
     <ul style="list-style-type:none;">
         <li><img src="recipe-images/peanut-chicken-curry.jpg" height="310" width="310"></li>
         <li><a href="recipes/peanut-curry-chicken.html">Peanut Curry Chicken</a></li>
     </ul>
+    <h2>Descriptions</h2>
+    <p>John's peanut chicken curry recipe doesn't follow a specific recipe from any particular country or culture; 
+    instead, it's a simple composite of every peanut curry he's ever come across. 
+    No use of coconut milk, as he feels that's a little too sweet and rich for the peanut butter.</p>
     <h1>Sweet And Sour Brisket</h1>
     <ul style="list-style-type:none;">
         <li><img src="recipe-images/sweet-sour-brisket.jpg"height="310" width="310"></li>
         <li><a href="recipes/sweet-sour-brisket.html">Sweet And Sour Brisket</a></li>
     </ul>
+    <h2>Descriptions</h2>
+    <p></p>
 </body>
 </html>
