Added missing alt image attributes to all html pages

--- a/recipes/margherita-pizza.html
+++ b/recipes/margherita-pizza.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Margherita Pizza</h1>
-    <img src="../recipe-images/margherita-pizza.jpg" height="350" width="350">
+    <img src="../recipe-images/margherita-pizza.jpg" alt="margheritapizza" height="350" width="350">
     <h2>Descriptions</h2>
     <p>Inspired by the pizza at Bar Del Corso,
     this Pizza Margherita features tomato sauce, mozzarella, and basil, with just a hint of sea salt.</p>
