--- a/recipes/peanut-curry-chicken.html
+++ b/recipes/peanut-curry-chicken.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Chef John's Peanut Curry Chicken</h1>
-    <img src="../recipe-images/peanut-chicken-curry.jpg" height="350" width="350">
+    <img src="../recipe-images/peanut-chicken-curry.jpg" alt="peanut chicken curry" height="350" width="350">
     <h2>Descriptions</h2>
     <p>John's peanut chicken curry recipe doesn't follow a specific recipe from any particular country or culture; 
     instead, it's a simple composite of every peanut curry he's ever come across. 
