--- a/recipes/sweet-sour-brisket.html
+++ b/recipes/sweet-sour-brisket.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Sweet And Sour Brisket</h1>
-    <img src="../recipe-images/sweet-sour-brisket.jpg"height="350" width="350">
+    <img src="../recipe-images/sweet-sour-brisket.jpg" alt="sweet sour brisket" height="350" width="350">
     <h2>Descriptions</h2>
     <p>This is the best brisket you will ever taste! No matter who comes for dinner, they always make sure that I'll be making this brisket.
     It is a very traditional dish for Rosh Hashanah and Passover but it certainly is a winner any time of the year for anyone who loves very tender beef.</p>
