--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 <body>
     <h1>Margherita Pizza</h1>
     <ul style="list-style-type:none;">
-        <li><img src="recipe-images/margherita-pizza.jpg" height="310" width="310"></li>
+        <li><img src="recipe-images/margherita-pizza.jpg" alt="margherita pizza" height="310" width="310"></li>
         <li><a href="recipes/margherita-pizza.html">Margherita Pizza</a></li>
     </ul>
     
     <h1>Chef John's Peanut Curry Chicken</h1>
     <ul style="list-style-type:none;">
-        <li><img src="recipe-images/peanut-chicken-curry.jpg" height="310" width="310"></li>
+        <li><img src="recipe-images/peanut-chicken-curry.jpg" alt="peanut chicken curry" height="310" width="310"></li>
         <li><a href="recipes/peanut-curry-chicken.html">Peanut Curry Chicken</a></li>
     </ul>
     <h1>Sweet And Sour Brisket</h1>
     <ul style="list-style-type:none;">
-        <li><img src="recipe-images/sweet-sour-brisket.jpg"height="310" width="310"></li>
+        <li><img src="recipe-images/sweet-sour-brisket.jpg" alt="sweet sour brisket" height="310" width="310"></li>
         <li><a href="recipes/sweet-sour-brisket.html">Sweet And Sour Brisket</a></li>
     </ul>
 </body>
